# mertisreader

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  00_core.ipynb  CHANGELOG.md  CITATION.cff  CLAUDE.md  Makefile  README.md  README.qmd  _quarto.yml  api.qmd  index.ipynb  index.qmd  objects.json  pyproject.toml  settings.ini  setup.py  test_lazy_helpers.py
.ai/: 00_CONSTRAINTS.md  00_PHILOSOPHY.md  02_ROADMAP.md  03_CURRENT_STATUS.md  README.md
.ai/decisions/: ADR-001-nbdev-notebooks-as-source.md  ADR-002-class-centric-api.md  ADR-003-processing-level-detection.md  ADR-004-lazy-evaluation-caching.md  ADR-005-explicit-interpolation-modes.md  ADR-007-raw-vs-cal-par-axis-ordering.md  ADR-008-pds4tools-integration.md  ADR-009-quarto-and-plain-python-migration.md  ARD-006-lazy-loading.md  index.md
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: jekyll-gh-pages.yml
_proc/: 00_core.ipynb  index.ipynb  nbdev.yml
_proc/docs/: search.json
conda/mertisreader/: meta.yaml
data/bcmer_tm_all_START-20200409T000000_END-20200410T000000_CRE-20240717T132010-ParamEventBootSciHK-short/cal/: mer_cal_hk_default_20200409_1-0651130766-12538__0_1.lblx  mer_cal_hk_default_20200409_20200409.xml  mer_cal_hk_extended_20200409_1-0651130766-12595__0_1.lblx  mer_cal_hk_extended_20200409_20200409.xml  mer_cal_sc_tis_20200409_1-0651130819-21186__0_1.fits  mer_cal_sc_tis_20200409_1-0651130819-21186__0_1.lblx  mer_cal_sc_tis_20200409_20200409_1.fits  mer_cal_sc_tis_20200409_20200409_1.tdat  mer_cal_sc_tis_20200409_20200409_1.xml
data/bcmer_tm_all_START-20200409T000000_END-20200410T000000_CRE-20240717T132010-ParamEventBootSciHK-short/par/: mer_par_hk_default_20200409_1-0651130766-12538__0_1.lblx  mer_par_hk_extended_20200409_1-0651130766-12595__0_1.lblx  mer_par_sc_tir_20200409_1-0651130751-42768__0_1.fits  mer_par_sc_tir_20200409_1-0651130751-42768__0_1.lblx  mer_par_sc_tis_20200409_1-0651130819-21186__0_1.fits  mer_par_sc_tis_20200409_1-0651130819-21186__0_1.lblx
data/bcmer_tm_all_START-20200409T000000_END-20200410T000000_CRE-20240717T132010-ParamEventBootSciHK-short/raw/: mer_raw_hk_default_20200409_1-0651130766-12538__0_1.lblx  mer_raw_hk_default_20200409_20200409.xml  mer_raw_hk_extended_20200409_1-0651130766-12595__0_1.lblx  mer_raw_hk_extended_20200409_20200409.xml  mer_raw_sc_tir_20200409_1-0651130751-42768__0_1.fits  mer_raw_sc_tir_20200409_20200409_1.fits  (+6 more)
docs/: README.html  _config.yml  api.html  core.html  frame_utils.html  index.html  lazy_loading.html  pds4_validation.html  robots.txt  search.json  sidebar.json  sitemap.xml
docs/_data/: topnav.yml
docs/docs_src/: styles.css
docs/examples/: read_merstis_test.ipynb
docs/reference/: LazyArray.html  LazyCSVLoader.html  MERTISDataPackReader.html  extract_label_metadata.html  extract_mertis_hk_columns.html  get_csv_field_metadata.html  index.html  validate_pds4_label.html
docs/tutorials/: core-reader.html  frame-utils.html  getting-started.html  index.html  lazy-loading.html  pds4-validation.html  read-example.html
docs_src/: index.qmd
docs_src/tutorials/: core-reader.qmd  lazy-loading.qmd
examples/: read_merstis_test.ipynb  read_mertis_test.ipynb  read_mertis_test.py
mertisreader/: __init__.py  _modidx.py  core.py  frame_utils.py  lazy_loading.py  pds4_validation.py
nbs/: 00_core.ipynb  01_lazy_loading.ipynb  02_frame_utils.ipynb  03_pds4_validation.ipynb  index.ipynb  nbdev.yml
nbs/docs/: index.html  robots.txt  sitemap.xml
public/: _config.yml  feed.xml  index.html  sitemap.xml
reference/: LazyArray.qmd  LazyCSVLoader.qmd  MERTISDataPackReader.qmd  _sidebar.yml  extract_label_metadata.qmd  extract_mertis_hk_columns.qmd  get_csv_field_metadata.qmd  index.qmd  validate_pds4_label.qmd
tests/: conftest.py  test_core.py  test_frame_utils.py  test_integration.py  test_lazy_csv.py  test_lazy_loading.py  test_pds4_validation.py
tutorials/: core-reader.qmd  frame-utils.qmd  getting-started.qmd  index.qmd  lazy-loading.qmd  pds4-validation.qmd  read-example.qmd
(+20 files in other folders)
