[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mertisreader"
dynamic = ["version"]
description = "helper routines to read ESA/Bepicolombo space mission - DLR MERTIS instrument data"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{name = "Mario D Amore", email = "mario.damore@dlr.de"}]
keywords = ['planetary', ',', 'instrument,', 'data']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 2 - Pre-Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['rich', 'numpy', 'pandas', 'astropy', 'matplotlib', 'xmltodict', 'polars', 'scipy', 'pds4_tools>=1.10.0']

[project.optional-dependencies]
docs = ["quartodoc>=0.11", "griffe<2", "jupytext>=1.16"]

[project.urls]
Repository = "https://github.com/mariodamore/mertisreader/tree/master/"
Documentation = "https://mariodamore.github.io/mertisreader/"

[tool.hatch.version]
path = "mertisreader/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["mertisreader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
