[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mertisreader"
dynamic = ["version"]
description = "helper routines to read ESA/Bepicolombo space mission - DLR MERTIS instrument data"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [ { name = "Mario D Amore", email = "mario.damore@dlr.de" } ]
keywords = ['planetary', 'instrument', 'data']
classifiers = [
    "Natural Language :: English", 
    "Intended Audience :: Science/Research", 
    "Development Status :: 4 - Beta", 
    "Programming Language :: Python :: 3"
]
dependencies = ['rich', 'numpy', 'pandas', 'astropy', 'matplotlib', 'xmltodict', 'polars', 'scipy', 'pds4_tools>=1.4']

[project.optional-dependencies]
docs = ["quartodoc>=0.11", "griffe<2", "jupytext>=1.16"]

[project.urls]
homepage = "https://github.com/mariodamore/mertisreader"
repository = "https://github.com/mariodamore/mertisreader"
documentation = "https://mariodamore.github.io/mertisreader/"

[tool.hatch.version]
path = "mertisreader/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["mertisreader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
